--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install huggingface_hub python-dotenv
+          pip install huggingface_hub python-dotenv os
       
       - name: Copy tourism.csv(if using a local file)
         run: |
