--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -68,7 +68,7 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install huggingface_hub python-dotenv datasets pandas scikit-learn
+          pip install pandas numpy huggingface_hub python-dotenv datasets scikit-learn
 
       - name: Copying tourism.csv
         run: |
