--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install huggingface_hub python-dotenv
+          pip install pandas numpy huggingface_hub python-dotenv datasets scikit-learn
       
       - name: Copy tourism.csv(if using a local file)
         run: |
