Chenages in pipeline 02

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -56,6 +56,7 @@ jobs:
 
   data-prepration:
     runs-on: ubuntu-latest
+    needs: register-dataset
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
