--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -142,10 +142,10 @@ jobs:
       - name: Commit and Push Generated Files
         
         run: |
-          git config --global user.name 'github-actions'
+          git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions@users.noreply.github.com'
           git add Master/Model_Dump_JOBLIB/*
           git commit -m "Adding genearated model files and confusion matrix plots" || echo "No changes to commit"
-          git push origin main
+          git push https://${{ secrets.GITHUB_TOKEN }}@github.com/jpkarthik/VisitWithUs_Tourism_Prediction.git HEAD:maim          
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
