--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -172,6 +172,17 @@ jobs:
         uses: actions/checkout@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: SET UP PYTHON
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+      
+      - name: INSTALL DEPENDENCIES
+        run: |
+          python -m pip install -upgrade pip
+          pip install huggingface_hub
+          
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
