--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -180,9 +180,9 @@ jobs:
       
       - name: INSTALL DEPENDENCIES
         run: |
-          python -m pip install -upgrade pip
+          python -m pip install --upgrade pip
           pip install huggingface_hub
-          
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
