--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -6,10 +6,11 @@ on:
       - main # Automatically triggers on push to the main branch
     paths:
       - 'Master/Data/tourism.csv'
-      - 'Master/Model_Building/DataRegistration.py'
-      - 'Master/Model_Building/DataPrepration.py'
-      - 'Master/Model_Building/BuildingModels.py'
-      - 'Master/Model_Building/main.py'
+      - 'Master/DataRegistration.py'
+      - 'Master/DataPrepration.py'
+      - 'Master/BuildingModels.py'
+      - 'Master/main.py'
+      - 'Master/HostingInHuggingFace.py'
       - '.github/workflows/pipeline.yml'
       - 'Master/Deployment/**'
   workflow_dispatch:
@@ -29,7 +30,7 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pandas numpy huggingface_hub python-dotenv datasets scikit-learn
+          pip install huggingface_hub python-dotenv
       
       - name: Copy tourism.csv(if using a local file)
         run: |
@@ -39,7 +40,7 @@ jobs:
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: |
-          cd Master/Model_Building
+          cd Master
           python main.py --job register
         continue-on-error: false
 
@@ -82,7 +83,7 @@ jobs:
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: |
-          cd Master/Model_Building
+          cd Master
           python main.py --job prepare
         continue-on-error: false
 
@@ -123,7 +124,7 @@ jobs:
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: |
-          cd Master/Model_Building
+          cd Master
           python main.py --job modelbuilding
         continue-on-error: false
       
@@ -205,10 +206,10 @@ jobs:
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: |
-          cd Master/Deployment
-          huggingface-cli login --token $HF_TOKEN
-          huggingface-cli repo sync --repo-id jpkarthik/tourism-prediction-app --token $HF_TOKEN
-          echo "Deployment to Hugging Face space completed"
+          cd Master
+          python main.py --job deploy
+          echo "Deployment To HF Space"
+          
 
       - name: Check Deployment Status
         if: failure()
